feat: add order flow with key delivery
